# biaslyze

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mkgendocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-docs.yml  publish-to-pypi.yml  python-app.yml
algorithm/: index.html
api/: index.html
biaslyze/: __init__.py  _plotly_dashboard.py  _plotting.py  augmentors.py  bias_detectors.py  concept_class.py  concept_detectors.py  concepts.py  counterfactual_score.py  evaluation_results.py  evaluators.py  text_representation.py  utils.py
biaslyze/bias_detectors/: __init__.py  counterfactual_biasdetector.py  lime_biasdetector.py  lime_keyword_biasdetector.py  masked_keyword_biasdetector.py
biaslyze/bias_detectors/counterfactual_biasdetector/: index.html
biaslyze/concept_class/: index.html
biaslyze/concept_detectors/: index.html
biaslyze/concepts/: __init__  concepts_de.py  concepts_en.py
biaslyze/results/: __init__.py  counterfactual_detection_results.py  lime_detection_results.py  results_utils.py
biaslyze/results/counterfactual_detection_results/: index.html
biaslyze/results/lime_detection_results/: index.html
biaslyze/text_representation/: index.html
biaslyze/utils/: index.html
docs/: index.md
docs/biaslyze/: bias_detectors.md  concept_detectors.md  evaluation_results.md  evaluators.md
docs/biaslyze/bias_detectors/: lime_keyword_biasdetector.md  masked_keyword_biasdetector.md
docs/sources/: CNAME  algorithm.md  api-overview.md  api.md  faq.md  index.md  tutorials-overview.md
docs/sources/biaslyze/: concept_class.md  concept_detectors.md  evaluation_results.md  evaluators.md  text_representation.md  utils.md
docs/sources/biaslyze/bias_detectors/: counterfactual_biasdetector.md  lime_biasdetector.md  lime_keyword_biasdetector.md  masked_keyword_biasdetector.md
docs/sources/biaslyze/results/: counterfactual_detection_results.md  lime_detection_results.md
docs/sources/tutorials/: tutorial-counterfactual-mitigation.md  tutorial-hugging-hatexplain.md  tutorial-toxic-comments.md  tutorial_toxic-comments.md
docs/sources/tutorials/tutorial-toxic-comments/: tutorial_toxic-comments.md
docs/templates/: algorithm.md  api-overview.md  api.md  ethics.md  getting-started.md
docs/templates/resources/: biaslyze_logo_farbe.eps
docs/templates/tutorials/: disaster-tweets.md  tutorial-counterfactual-mitigation.md  tutorial-hugging-hatexplain.md  tutorial-toxic-comments.md  tutorial-working-with-custom-concepts.md  tutorial_toxic-comments.md
faq/: index.html
notebooks/: SL_Test_032023.ipynb  Tutorial_biaslyze_counterfactual-mitigation-usecase.ipynb  Tutorial_biaslyze_toxic-comments-usecase.ipynb  Usertesting_biaslyze_toxic-comments-usecase.ipynb  simple-pilot.ipynb  test-0.0.1-toxic-comments.ipynb  test-0.0.1-twitter-disaster.ipynb  test-court-judgment.ipynb  test-toxic-comments.ipynb
tests/: test_concept_class.py  test_counterfactual_bias_detector.py  test_counterfactual_utils.py  test_dashboard.py  test_text_represenation.py
tutorials/tutorial-counterfactual-mitigation/: index.html
tutorials/tutorial-hugging-hatexplain/: index.html
tutorials/tutorial-toxic-comments/: index.html
tutorials/tutorial-working-with-custom-concepts/: index.html
