[tool.poetry]
name = "biaslyze"
version = "0.0.5-alpha"
description = "The NLP Bias Identification Toolkit"
authors = [
    "Tobias Sterbak & Stina Lohmüller <hello@biaslyze.org>",
]
maintainers = [
    "Tobias Sterbak <hello@tobiassterbak.com>",
    "Stina Lohmüller <slohmueller@posteo.de>",
]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://biaslyze.org"
repository = "https://github.com/biaslyze-dev/biaslyze/issues"
keywords = ["NLP", "bias", "ethics", "fairness"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "<3.11,>=3.10"
numpy = "1.23.2"
pandas = "^1.5.3"
scipy = "1.8.0"
jupyterlab = "^3.5.2"
scikit-learn = "^1.2.0"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
bokeh = "^3.1.0"
eli5 = "^0.13.0"
spacy = "^3.5.0"
transformers = "^4.26.1"
bertopic = "0.13.0"
umap-learn = "^0.5.3"
nvidia-cublas-cu11 = "^11.11.3.6"
nvidia-cudnn-cu11 = "^8.9.1.23"
nvidia-cuda-cupti-cu11 = "^11.8.87"
nvidia-cuda-nvrtc-cu11 = "^11.8.89"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cufft-cu11 = "^10.9.0.58"
nvidia-curand-cu11 = "^10.3.0.86"
nvidia-cusolver-cu11 = "^11.4.1.48"
nvidia-cusparse-cu11 = "^11.7.5.86"
nvidia-nccl-cu11 = "^2.16.5"
nvidia-nvtx-cu11 = "^11.8.86"
triton = "^2.0.0.post1"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.1.1"
mkgendocs = "^0.9.2"
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.254"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
