[tool.poetry]
name = "biaslyze"
version = "0.0.8-alpha"
description = "The NLP Bias Identification Toolkit"
authors = [
    "Tobias Sterbak & Stina Lohmüller <hello@biaslyze.org>",
]
maintainers = [
    "Tobias Sterbak <hello@tobiassterbak.com>",
    "Stina Lohmüller <slohmueller@posteo.de>",
]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://biaslyze.org"
repository = "https://github.com/biaslyze-dev/biaslyze/issues"
keywords = ["NLP", "bias", "ethics", "fairness"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "<3.11,>=3.10"
numpy = "1.23.2"
pandas = "^1.5.3"
scipy = "1.8.0"
jupyterlab = "^3.5.2"
scikit-learn = "^1.2.0"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
spacy = "^3.5.0"
dash = "^2.11.1"
plotly = "^5.15.0"
dill = "^0.3.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.254"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.1"
material-plausible-plugin = "^0.2.0"
mkgendocs = "^0.9.2"
Pillow = "^10.0.0"
CairoSVG = "^2.7.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
